--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "keywords": [],
   "license": "GPL-3.0",
   "publishConfig": {
-    "registry": "http://nexus.cvs.ula.comcast.net:8081/nexus/content/repositories/csv-npm"
+    "registry": "http://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lenkasoft/taster.git"
+    "url": "git+https://github.com/lenkasoft/taster.git"
   },
   "dependencies": {
     "lodash": "^4.6.1",
@@ -28,5 +28,11 @@
   },
   "engines": {
     "node": "^0.12.7"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/lenkasoft/taster/issues"
+  },
+  "homepage": "https://github.com/lenkasoft/taster#readme",
+  "main": "index.js",
+  "author": "lenka <lenka.reborn@gmail.com> (https://github.com/lenkasoft)"
 }
